--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       --light: #ffffff;
       --dark: #1e1e1e;
     }
-    * { box-sizing: border-box; }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
@@ -21,119 +25,137 @@
       background-color: var(--background);
       color: var(--primary);
     }
+
     .dark-mode {
       background-color: var(--dark);
       color: #eee;
     }
+
     .container {
       max-width: 960px;
+      width: 100%;
       margin: auto;
       padding: 20px;
       background: var(--light);
       border-radius: 12px;
     }
+
     .dark-mode .container {
       background: #2a2a2a;
     }
+
     .header {
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 10px;
     }
-    .logo { max-height: 80px; }
-    h2 { text-align: center; }
+
+    .logo {
+      max-height: 80px;
+    }
+
+    h2 {
+      text-align: center;
+    }
+
+    .device-header {
+      display: flex;
+      justify-content: space-between;
+      font-weight: bold;
+      gap: 10px;
+      padding: 0 10px;
+    }
+
+    .device-header span {
+      flex: 1;
+      min-width: 100px;
+    }
+
     .device-row {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       margin-bottom: 10px;
     }
-    input, select {
+
+    input,
+    select {
       flex: 1;
       padding: 10px;
       font-size: 14px;
-      min-width: 120px;
+      min-width: 100px;
     }
-    .device-header {
-      font-weight: bold;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 8px;
-      gap: 10px;
-      padding: 0 10px;
-    }
-    .device-header span {
-      flex: 1;
-      min-width: 120px;
-    }
+
     .result {
       margin-top: 30px;
       padding: 20px;
       background: linear-gradient(145deg, #e8fff7, #ccf3e7);
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
       border: 1px solid #18bc9c;
     }
+
     .dark-mode .result {
       background: #444;
     }
+
     button {
-      padding: 10px 20px;
-      font-size: 14px;
+      padding: 12px;
+      font-size: 16px;
       border: none;
       border-radius: 6px;
       cursor: pointer;
     }
-    .btn-primary { background-color: var(--secondary); color: #fff; }
-    .btn-secondary { background-color: #f39c12; color: #fff; }
-    .btn-danger { background-color: #e74c3c; color: #fff; }
+
+    .btn-primary {
+      background-color: var(--secondary);
+      color: #fff;
+    }
+
+    .btn-secondary {
+      background-color: #f39c12;
+      color: #fff;
+    }
+
+    .btn-danger {
+      background-color: #e74c3c;
+      color: #fff;
+    }
+
     .controls {
       display: flex;
       justify-content: space-between;
-      gap: 10px;
-      margin-top: 15px;
       flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 20px;
     }
-   @media (max-width: 600px) {
-  .device-row,
-  .device-header {
-    flex-direction: column;
-    gap: 6px;
-  }
 
-  .device-header span,
-  .device-row input,
-  .device-row select,
-  .device-row button {
-    flex: 100%;
-    min-width: 100%;
-  }
+    @media (max-width: 600px) {
+      .header,
+      .device-header,
+      .device-row,
+      .controls {
+        flex-direction: column;
+        align-items: stretch;
+      }
 
-  .controls {
-    flex-direction: column;
-    gap: 10px;
-  }
+      .device-header span,
+      input,
+      select,
+      button {
+        flex: 1 1 100%;
+        min-width: 100%;
+      }
 
-  .logo {
-    max-height: 50px;
-  }
+      .logo {
+        max-width: 100px;
+      }
 
-  .header {
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-  }
-
-  h2 {
-    font-size: 20px;
-    text-align: center;
-  }
-
-  button {
-    width: 100%;
-  }
-}
-
+      h2 {
+        font-size: 20px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -143,23 +165,28 @@
     <button onclick="toggleDarkMode()">🌙 Toggle Dark Mode</button>
   </div>
   <h2>🌞 Solar Load Calculator</h2>
+
   <div class="device-header">
     <span>Appliance</span>
     <span>Hours</span>
     <span>Quantity</span>
   </div>
+
   <div id="devices"></div>
+
   <div class="controls">
     <button class="btn-secondary" onclick="addDevice()">➕ Add Device</button>
     <button class="btn-primary" onclick="calculateLoad()">⚡ Calculate</button>
     <button onclick="window.print()">🖨️ Print / PDF</button>
     <a href="https://wa.me/234XXXXXXXXXX" target="_blank" class="btn-primary">💬 WhatsApp Quote</a>
   </div>
+
   <div class="result" id="result" style="display:none;"></div>
 </div>
 
 <script>
 let deviceIndex = 0;
+
 const applianceOptions = {
   "TV": 100,
   "Light": 12,
@@ -188,7 +215,6 @@ function addDevice(name = '', hours = '', qty = '', isCustom = false) {
   row.className = 'device-row';
 
   const idSuffix = deviceIndex;
-
   const options = Object.keys(applianceOptions).map(appl =>
     `<option value="${appl}" ${appl === name ? 'selected' : ''}>${appl}</option>`
   ).join('');
@@ -261,8 +287,8 @@ function calculateLoad() {
 function calculateInverterSize(devices, safetyMargin = 1.3) {
   let totalLoad = devices.reduce((sum, d) => sum + d.wattage * d.quantity, 0);
   const inverterSizeWatts = totalLoad * safetyMargin;
-  let sizes = [1, 1.5, 2, 3, 5, 7.5, 10, 20];
-  let suggested = sizes.find(size => inverterSizeWatts <= size * 1000) || '20+';
+  const sizes = [1, 1.5, 2, 3, 5, 7.5, 10, 20];
+  const suggested = sizes.find(size => inverterSizeWatts <= size * 1000) || '20+';
   return {
     totalLoadWatts: totalLoad,
     requiredInverterWatts: inverterSizeWatts,
@@ -270,11 +296,10 @@ function calculateInverterSize(devices, safetyMargin = 1.3) {
   };
 }
 
-
-  document.addEventListener("DOMContentLoaded", () => {
-    const preload = ["TV", "Light", "Fan", "Fridge", "Desktop Computer", "AC"];
-    preload.forEach(name => addDevice(name, 0, 0));
-  });
+document.addEventListener("DOMContentLoaded", () => {
+  const preload = ["TV", "Light", "Fan", "Fridge", "Desktop Computer", "AC"];
+  preload.forEach(name => addDevice(name, 0, 0));
+});
 </script>
 </body>
 </html>
