--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     }
 
     button {
-      padding: 12px;
-      font-size: 16px;
+      padding: 10px 20px;
+      font-size: 14px;
       border: none;
       border-radius: 6px;
       cursor: pointer;
@@ -126,180 +126,169 @@
     .controls {
       display: flex;
       justify-content: space-between;
-      flex-wrap: wrap;
       gap: 10px;
-      margin-top: 20px;
+      margin-top: 15px;
+      flex-wrap: wrap;
     }
 
     @media (max-width: 600px) {
-      .header,
       .device-header,
       .device-row,
       .controls {
         flex-direction: column;
-        align-items: stretch;
       }
 
       .device-header span,
-      input,
-      select,
-      button {
-        flex: 1 1 100%;
+      .device-row input,
+      .device-row select,
+      .device-row button {
+        flex: 100%;
         min-width: 100%;
       }
 
       .logo {
-        max-width: 100px;
-      }
-
-      h2 {
-        font-size: 20px;
+        max-height: 50px;
       }
     }
   </style>
 </head>
 <body>
-<div class="container">
-  <div class="header">
-    <img src="FB_IMG_1728930059328~2_1.jpg" class="logo" alt="Company Logo">
-    <button onclick="toggleDarkMode()">🌙 Toggle Dark Mode</button>
+  <div class="container">
+    <div class="header">
+      <img src="FB_IMG_1728930059328~2_1.jpg" class="logo" alt="Company Logo">
+      <button onclick="toggleDarkMode()">🌙 Toggle Dark Mode</button>
+    </div>
+    <h2>🌞 Solar Load Calculator</h2>
+    <div class="device-header">
+      <span>Appliance</span>
+      <span>Hours</span>
+      <span>Quantity</span>
+    </div>
+    <div id="devices"></div>
+    <div class="controls">
+      <button class="btn-secondary" onclick="addDevice()">➕ Add Device</button>
+      <button class="btn-primary" onclick="calculateLoad()">⚡ Calculate</button>
+      <button onclick="window.print()">🖨️ Print / PDF</button>
+      <a href="https://wa.me/234XXXXXXXXXX" target="_blank" class="btn-primary">💬 WhatsApp Quote</a>
+    </div>
+    <div class="result" id="result" style="display:none;"></div>
   </div>
-  <h2>🌞 Solar Load Calculator</h2>
 
-  <div class="device-header">
-    <span>Appliance</span>
-    <span>Hours</span>
-    <span>Quantity</span>
-  </div>
+  <script>
+    let deviceIndex = 0;
+    const applianceOptions = {
+      "TV": 100,
+      "Light": 12,
+      "Fan": 85,
+      "AC": 850,
+      "Inverter AC": 1200,
+      "Fridge": 100,
+      "Desktop Computer": 200,
+      "Freezer": 300,
+      "Water Dispenser": 500,
+      "Ceiling Fan": 80,
+      "Pump": 746,
+      "Laptop": 60,
+      "Printer": 500,
+      "Water Heater": 1500,
+      "Gas Oven": 3000,
+      "Cake Display": 350
+    };
 
-  <div id="devices"></div>
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark-mode');
+    }
 
-  <div class="controls">
-    <button class="btn-secondary" onclick="addDevice()">➕ Add Device</button>
-    <button class="btn-primary" onclick="calculateLoad()">⚡ Calculate</button>
-    <button onclick="window.print()">🖨️ Print / PDF</button>
-    <a href="https://wa.me/234XXXXXXXXXX" target="_blank" class="btn-primary">💬 WhatsApp Quote</a>
-  </div>
+    function addDevice(name = '', hours = '', qty = '', isCustom = false) {
+      const row = document.createElement('div');
+      row.className = 'device-row';
 
-  <div class="result" id="result" style="display:none;"></div>
-</div>
+      const idSuffix = deviceIndex;
+      const options = Object.keys(applianceOptions).map(appl =>
+        `<option value="${appl}" ${appl === name ? 'selected' : ''}>${appl}</option>`
+      ).join('');
 
-<script>
-let deviceIndex = 0;
+      row.innerHTML = `
+        <select id="device${idSuffix}-name">
+          ${options}<option value="Custom" ${name === 'Custom' ? 'selected' : ''}>Custom</option>
+        </select>
+        <input type="text" placeholder="Custom Name" id="device${idSuffix}-customname" value="${isCustom ? name : ''}" style="display:${name === 'Custom' ? 'block' : 'none'}">
+        <input type="number" placeholder="Hours" value="${hours}" id="device${idSuffix}-hours">
+        <input type="number" placeholder="Qty" value="${qty}" id="device${idSuffix}-qty">
+        <input type="number" placeholder="Wattage" id="device${idSuffix}-watt" style="display:${isCustom ? 'block' : 'none'}">
+        <button class="btn-danger" onclick="this.parentElement.remove()">❌</button>
+      `;
 
-const applianceOptions = {
-  "TV": 100,
-  "Light": 12,
-  "Fan": 85,
-  "AC": 850,
-  "Inverter AC": 1200,
-  "Fridge": 100,
-  "Desktop Computer": 200,
-  "Freezer": 300,
-  "Water Dispenser": 500,
-  "Ceiling Fan": 80,
-  "Pump": 746,
-  "Laptop": 60,
-  "Printer": 500,
-  "Water Heater": 1500,
-  "Gas Oven": 3000,
-  "Cake Display": 350
-};
+      row.querySelector(`#device${idSuffix}-name`).addEventListener('change', function () {
+        const isCustom = this.value === 'Custom';
+        row.querySelector(`#device${idSuffix}-watt`).style.display = isCustom ? 'block' : 'none';
+        row.querySelector(`#device${idSuffix}-customname`).style.display = isCustom ? 'block' : 'none';
+      });
 
-function toggleDarkMode() {
-  document.body.classList.toggle('dark-mode');
-}
+      document.getElementById('devices').appendChild(row);
+      deviceIndex++;
+    }
 
-function addDevice(name = '', hours = '', qty = '', isCustom = false) {
-  const row = document.createElement('div');
-  row.className = 'device-row';
+    function calculateLoad() {
+      let totalWh = 0;
+      let devices = [];
+      for (let i = 0; i < deviceIndex; i++) {
+        const nameElem = document.getElementById(`device${i}-name`);
+        const hoursElem = document.getElementById(`device${i}-hours`);
+        const qtyElem = document.getElementById(`device${i}-qty`);
+        const wattElem = document.getElementById(`device${i}-watt`);
+        const customNameElem = document.getElementById(`device${i}-customname`);
 
-  const idSuffix = deviceIndex;
-  const options = Object.keys(applianceOptions).map(appl =>
-    `<option value="${appl}" ${appl === name ? 'selected' : ''}>${appl}</option>`
-  ).join('');
+        if (!nameElem || !hoursElem || !qtyElem) continue;
 
-  row.innerHTML = `
-    <select id="device${idSuffix}-name">
-      ${options}<option value="Custom" ${name === 'Custom' ? 'selected' : ''}>Custom</option>
-    </select>
-    <input type="text" placeholder="Custom Name" id="device${idSuffix}-customname" value="${isCustom ? name : ''}" style="display:${name === 'Custom' ? 'block' : 'none'}">
-    <input type="number" placeholder="Hours" value="${hours}" id="device${idSuffix}-hours">
-    <input type="number" placeholder="Qty" value="${qty}" id="device${idSuffix}-qty">
-    <input type="number" placeholder="Wattage" id="device${idSuffix}-watt" style="display:${isCustom ? 'block' : 'none'}">
-    <button class="btn-danger" onclick="this.parentElement.remove()">❌</button>
-  `;
+        const name = nameElem.value;
+        const customName = customNameElem && customNameElem.style.display === 'block' ? customNameElem.value : name;
+        const hours = parseFloat(hoursElem.value);
+        const qty = parseInt(qtyElem.value);
+        const customWatt = wattElem && wattElem.style.display === 'block' ? parseFloat(wattElem.value) : applianceOptions[name];
 
-  row.querySelector(`#device${idSuffix}-name`).addEventListener('change', function () {
-    const isCustom = this.value === 'Custom';
-    row.querySelector(`#device${idSuffix}-watt`).style.display = isCustom ? 'block' : 'none';
-    row.querySelector(`#device${idSuffix}-customname`).style.display = isCustom ? 'block' : 'none';
-  });
+        if (isNaN(hours) || isNaN(qty) || isNaN(customWatt)) continue;
 
-  document.getElementById('devices').appendChild(row);
-  deviceIndex++;
-}
+        totalWh += customWatt * hours * qty;
+        devices.push({ name: customName, wattage: customWatt, quantity: qty });
+      }
 
-function calculateLoad() {
-  let totalWh = 0;
-  let devices = [];
-  for (let i = 0; i < deviceIndex; i++) {
-    const nameElem = document.getElementById(`device${i}-name`);
-    const hoursElem = document.getElementById(`device${i}-hours`);
-    const qtyElem = document.getElementById(`device${i}-qty`);
-    const wattElem = document.getElementById(`device${i}-watt`);
-    const customNameElem = document.getElementById(`device${i}-customname`);
+      const inverterData = calculateInverterSize(devices);
+      const panelWattage = (totalWh * 1.2) / 3.4;
+      const roundedPanel = Math.ceil(panelWattage / 100) * 100;
+      const panel = `${roundedPanel}W`;
+      const batterySizeWh = (totalWh / 0.85) * 2 * 0.8;
+      const batteryKWh = Math.ceil(batterySizeWh / 1000 / 5) * 5;
 
-    if (!nameElem || !hoursElem || !qtyElem) continue;
+      document.getElementById('result').style.display = 'block';
+      document.getElementById('result').innerHTML = `
+        <h3 style="color: #18bc9c;">🔋 Recommended Solar System</h3>
+        <ul>
+          <li><strong>Total Load:</strong> ⚡ ${totalWh.toFixed(1)} Wh/day</li>
+          <li><strong>Inverter Size:</strong> 🔌 ${inverterData.suggestedInverter} (${inverterData.requiredInverterWatts.toFixed(1)} W)</li>
+          <li><strong>Solar Panel:</strong> 🌞 ${panel}</li>
+          <li><strong>Battery Bank:</strong> 🔋 ${batteryKWh} kWh (Lithium Recommended)</li>
+        </ul>
+        <p style="color: #555; font-style: italic;">📌 Note: Estimated values based on typical usage. Actual performance may vary.</p>
+      `;
+    }
 
-    const name = nameElem.value;
-    const customName = customNameElem && customNameElem.style.display === 'block' ? customNameElem.value : name;
-    const hours = parseFloat(hoursElem.value);
-    const qty = parseInt(qtyElem.value);
-    const customWatt = wattElem && wattElem.style.display === 'block' ? parseFloat(wattElem.value) : applianceOptions[name];
+    function calculateInverterSize(devices, safetyMargin = 1.3) {
+      let totalLoad = devices.reduce((sum, d) => sum + d.wattage * d.quantity, 0);
+      const inverterSizeWatts = totalLoad * safetyMargin;
+      let sizes = [1, 1.5, 2, 3, 5, 7.5, 10, 20];
+      let suggested = sizes.find(size => inverterSizeWatts <= size * 1000) || '20+';
+      return {
+        totalLoadWatts: totalLoad,
+        requiredInverterWatts: inverterSizeWatts,
+        suggestedInverter: suggested + ' kVA'
+      };
+    }
 
-    if (isNaN(hours) || isNaN(qty) || isNaN(customWatt)) continue;
-
-    totalWh += customWatt * hours * qty;
-    devices.push({ name: customName, wattage: customWatt, quantity: qty });
-  }
-
-  const inverterData = calculateInverterSize(devices);
-  const panelWattage = (totalWh * 1.2) / 3.4;
-  const roundedPanel = Math.ceil(panelWattage / 100) * 100;
-  const panel = `${roundedPanel}W`;
-  const batterySizeWh = (totalWh / 0.85) * 2 * 0.8;
-  const batteryKWh = Math.ceil(batterySizeWh / 1000 / 5) * 5;
-
-  document.getElementById('result').style.display = 'block';
-  document.getElementById('result').innerHTML = `
-    <h3 style="color: #18bc9c;">🔋 Recommended Solar System</h3>
-    <ul>
-      <li><strong>Total Load:</strong> ⚡ ${totalWh.toFixed(1)} Wh/day</li>
-      <li><strong>Inverter Size:</strong> 🔌 ${inverterData.suggestedInverter} (${inverterData.requiredInverterWatts.toFixed(1)} W)</li>
-      <li><strong>Solar Panel:</strong> 🌞 ${panel}</li>
-      <li><strong>Battery Bank:</strong> 🔋 ${batteryKWh} kWh (Lithium Recommended)</li>
-    </ul>
-    <p style="color: #555; font-style: italic;">📌 Note: Estimated values based on typical usage. Actual performance may vary.</p>
-  `;
-}
-
-function calculateInverterSize(devices, safetyMargin = 1.3) {
-  let totalLoad = devices.reduce((sum, d) => sum + d.wattage * d.quantity, 0);
-  const inverterSizeWatts = totalLoad * safetyMargin;
-  const sizes = [1, 1.5, 2, 3, 5, 7.5, 10, 20];
-  const suggested = sizes.find(size => inverterSizeWatts <= size * 1000) || '20+';
-  return {
-    totalLoadWatts: totalLoad,
-    requiredInverterWatts: inverterSizeWatts,
-    suggestedInverter: suggested + ' kVA'
-  };
-}
-
-document.addEventListener("DOMContentLoaded", () => {
-  const preload = ["TV", "Light", "Fan", "Fridge", "Desktop Computer", "AC"];
-  preload.forEach(name => addDevice(name, 0, 0));
-});
-</script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const preload = ["TV", "Light", "Fan", "Fridge", "Desktop Computer", "AC"];
+      preload.forEach(name => addDevice(name, '', ''));
+    });
+  </script>
 </body>
 </html>
